log
Fri 09 Sep 2022 04:29:31 PM UTC: 
 tests:  0|6
total_score: 0/70
59d8aa5
Fri 09 Sep 2022 04:51:10 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:11: error: ‘true’ undeclared (first use in this function)
   52 |     while(true){
      |           ^~~~
hashmap.c:52:11: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:16: error: ‘capacity’ undeclared (first use in this function)
   59 |       if (i >= capacity) break;
      |                ^~~~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:75:16: error: statement with no effect [-Werror=unused-value]
   75 |   map->current == -1;
      |   ~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
1c3a300
Fri 09 Sep 2022 04:51:39 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:16: error: statement with no effect [-Werror=unused-value]
   75 |   map->current == -1;
      |   ~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
4510350
Fri 09 Sep 2022 04:52:26 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
6a077b2
Fri 09 Sep 2022 04:54:06 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
72244b0
Fri 09 Sep 2022 04:55:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
1757016
Fri 09 Sep 2022 04:57:24 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
7385821
Fri 09 Sep 2022 04:58:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
a8c552e
Fri 09 Sep 2022 04:59:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
a32272f
Fri 09 Sep 2022 05:03:35 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:89:3: error: expected ‘;’ before ‘}’ token
   89 |   }
      |   ^
Compilation failed
d473f31
Fri 09 Sep 2022 05:03:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
292bb04
Fri 09 Sep 2022 05:04:56 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|5
total_score: 20/70
e7d5315
Fri 09 Sep 2022 05:18:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
ec62bfc
Fri 09 Sep 2022 05:22:35 PM UTC: 
 hashmap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
 tests:  6|4
total_score: 30/70
a1ef762
Fri 09 Sep 2022 05:26:50 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
3c31d8d
Fri 09 Sep 2022 05:30:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
054d1ae
Fri 09 Sep 2022 05:33:11 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6f804d1
Fri 09 Sep 2022 05:38:58 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
067a77a
Fri 09 Sep 2022 05:39:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
a47adc7
Fri 09 Sep 2022 05:42:00 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
2a34732
Fri 09 Sep 2022 05:43:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|2
total_score: 50/70
0fcb4ff
Fri 09 Sep 2022 05:45:11 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
test.c: In function ‘nextMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2a4fcd
